--- a/config/charm.cfg
+++ b/config/charm.cfg
@@ -250,7 +250,7 @@ CharmCrafting {
 
     Crate {
         # Shows tooltip containing crate contents when hovering over the crate in the inventory. (default true)
-        B:"Crate tooltip"=false
+        B:"Crate tooltip"=true
 
         # Crate tooltip needs the shift key held down to be visible (default false)
         B:"Tooltip shift key"=false
@@ -705,19 +705,19 @@ CharmWorld {
 
     AbandonedCrates {
         # Chance (out of 1.0) of a crate generating in a chunk, if it is possible to do so. (default 0.3)
-        D:"Generate crate chance"=0.3
+        D:"Generate crate chance"=0.2
 
         # Crates will spawn higher than this Y value.
         # For Cubic Chunks you should set this value very low. (default 28)
-        I:"Lower limit"=28
+        I:"Lower limit"=0
 
         # Crates will spawn lower than this Y value. (default 48)
-        I:"Upper limit"=48
+        I:"Upper limit"=50
     }
 
     BatBucket {
         # Add the Bat in a Bucket to dungeon loot. (default true)
-        B:"Add to loot"=true
+        B:"Add to loot"=false
 
         # Maximum time (in seconds) that the glowing effect will last. (default 10)
         I:"Maximum time"=10
@@ -802,7 +802,7 @@ CharmWorld {
         I:"Despawn light level"=8
 
         # Maximum depth at which Spectres can spawn. (default 24)
-        I:"Spawn depth"=24
+        I:"Spawn depth"=0
 
         # The higher this value, the more Spectres will spawn. (default 100)
         I:"Spawn weight"=100
@@ -875,7 +875,7 @@ CharmWorld {
         D:"Damage multiplier"=0.75
 
         # Maximum durability of the totem. (default 100)
-        I:"Maximum Health"=100
+        I:"Maximum Health"=300
     }
 
     VillageDecorations {
@@ -906,7 +906,7 @@ CharmWorld {
 
         # Chance (out of 1.0) of a chunk within the village boundary spawning a golem.
         # This is only valid if the 'Mobs outside' config option allows it. (default 0.1)
-        D:"Extra golem weight"=0.1
+        D:"Extra golem weight"=1
 
         # Chance (out of 1.0) of a chunk allowing any kind of mob generation.
         # The greater the chance, the more likely a mob will be considered to spawn.
