--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -419,6 +419,7 @@ entitybasehealth {
     D:gorgon=111.16340637207031
     D:grottol=20.0
     D:hoarder=20.0
+    D:if_hydra=200.0
     D:if_troll=100.0
     D:krake=8.0
     D:"mocreatures:biggolem"=50.0
