--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -92,16 +92,16 @@ general {
         rustic:chili_pepper_seeds:*=reskillable:farming|4
         rustic:tomato_seeds:*=reskillable:farming|4
         rustic:grape_stem:*=reskillable:farming|4
-        notreepunching:knife/copper:*=reskillable:gathering|2
-        notreepunching:knife/tin:*=reskillable:gathering|2
+        notreepunching:knife/copper:*=reskillable:gathering|3
+        notreepunching:knife/tin:*=reskillable:gathering|3
         notreepunching:knife/bronze:*=reskillable:gathering|6
-        notreepunching:knife/gold:*=reskillable:gathering|4,reskillable:magic|2
+        notreepunching:knife/gold:*=reskillable:gathering|4,reskillable:magic|12
         notreepunching:knife/iron:*=reskillable:gathering|9
-        notreepunching:knife/lead:*=reskillable:gathering|3
+        notreepunching:knife/lead:*=reskillable:gathering|4
         notreepunching:knife/steel:*=reskillable:gathering|12
         notreepunching:knife/diamond:*=reskillable:gathering|18
-        notreepunching:saw/gold:*=reskillable:gathering|4,reskillable:magic|2
-        notreepunching:saw/copper:*=reskillable:gathering|2
+        notreepunching:saw/gold:*=reskillable:gathering|4,reskillable:magic|12
+        notreepunching:saw/copper:*=reskillable:gathering|3
         notreepunching:saw/tin:*=reskillable:gathering|2
         notreepunching:saw/lead:*=reskillable:gathering|4
         notreepunching:saw/bronze:*=reskillable:gathering|6
@@ -112,10 +112,10 @@ general {
         notreepunching:mattock/tin:*=reskillable:gathering|2,reskillable:farming|2
         notreepunching:mattock/bronze:*=reskillable:gathering|4,reskillable:farming|4
         notreepunching:mattock/lead:*=reskillable:gathering|3,reskillable:farming|3
-        notreepunching:mattock/gold:*=reskillable:gathering|2,reskillable:farming|2,reskillable:magic|2
+        notreepunching:mattock/gold:*=reskillable:gathering|2,reskillable:farming|2,reskillable:magic|12
         notreepunching:mattock/iron:*=reskillable:gathering|6,reskillable:farming|6
         notreepunching:mattock/steel:*=reskillable:gathering|8,reskillable:farming|8
-        notreepunching:mattock/diamond:*=reskillable:gathering|12,reskillable:farming|12
+        notreepunching:mattock/diamond:*=reskillable:gathering|10,reskillable:farming|10
         toolbelt:belt:*=reskillable:agility|4
         adhooks:pudge_launcher:*=reskillable:agility|4
         adhooks:web_launcher:*=reskillable:agility|8
@@ -139,7 +139,7 @@ general {
         mysticalworld:copper_ore:*=reskillable:mining|2
         forestry:resources:2:*=reskillable:mining|2
         mysticalworld:silver_ore:*=reskillable:mining|4,reskillable:magic|4
-        mysticalworld:amethyst_ore:*=reskillable:mining|4,reskillable:magic|6
+        mysticalworld:amethyst_ore:*=reskillable:mining|8,reskillable:magic|4
         thaumcraft:ore_quartz:*=reskillable:mining|4
         thaumcraft:ore_amber:*=reskillable:mining|4,reskillable:magic|4
         thaumcraft:ore_cinnabar:*=reskillable:mining|2,reskillable:magic|2
@@ -573,26 +573,26 @@ general {
         spartanweaponry:mace_stone:*=reskillable:attack|2
         spartanweaponry:glaive_stone:*=reskillable:attack|2
         spartanweaponry:staff_stone:*=reskillable:agility|2
-        spartanweaponry:dagger_copper:*=reskillable:agility|2
-        spartanweaponry:longsword_copper:*=reskillable:attack|2
-        spartanweaponry:katana_copper:*=reskillable:agility|2
-        spartanweaponry:saber_copper:*=reskillable:attack|2
-        spartanweaponry:rapier_copper:*=reskillable:agility|2
-        spartanweaponry:greatsword_copper:*=reskillable:attack|2
-        spartanweaponry:hammer_copper:*=reskillable:attack|2
-        spartanweaponry:warhammer_copper:*=reskillable:attack|2
-        spartanweaponry:spear_copper:*=reskillable:agility|2
-        spartanweaponry:halberd_copper:*=reskillable:agility|2
-        spartanweaponry:pike_copper:*=reskillable:attack|2
-        spartanweaponry:lance_copper:*=reskillable:attack|2
-        spartanweaponry:throwing_knife_copper:*=reskillable:agility|2
-        spartanweaponry:throwing_axe_copper:*=reskillable:agility|2
-        spartanweaponry:javelin_copper:*=reskillable:agility|2
-        spartanweaponry:boomerang_copper:*=reskillable:agility|2
-        spartanweaponry:battleaxe_copper:*=reskillable:attack|2
-        spartanweaponry:mace_copper:*=reskillable:attack|2
-        spartanweaponry:glaive_copper:*=reskillable:attack|2
-        spartanweaponry:staff_copper:*=reskillable:agility|2
+        spartanweaponry:dagger_copper:*=reskillable:agility|3
+        spartanweaponry:longsword_copper:*=reskillable:attack|3
+        spartanweaponry:katana_copper:*=reskillable:agility|3
+        spartanweaponry:saber_copper:*=reskillable:attack|3
+        spartanweaponry:rapier_copper:*=reskillable:agility|3
+        spartanweaponry:greatsword_copper:*=reskillable:attack|3
+        spartanweaponry:hammer_copper:*=reskillable:attack|3
+        spartanweaponry:warhammer_copper:*=reskillable:attack|3
+        spartanweaponry:spear_copper:*=reskillable:agility|3
+        spartanweaponry:halberd_copper:*=reskillable:agility|3
+        spartanweaponry:pike_copper:*=reskillable:attack|3
+        spartanweaponry:lance_copper:*=reskillable:attack|3
+        spartanweaponry:throwing_knife_copper:*=reskillable:agility|3
+        spartanweaponry:throwing_axe_copper:*=reskillable:agility|3
+        spartanweaponry:javelin_copper:*=reskillable:agility|3
+        spartanweaponry:boomerang_copper:*=reskillable:agility|3
+        spartanweaponry:battleaxe_copper:*=reskillable:attack|3
+        spartanweaponry:mace_copper:*=reskillable:attack|3
+        spartanweaponry:glaive_copper:*=reskillable:attack|3
+        spartanweaponry:staff_copper:*=reskillable:agility|3
         spartanweaponry:dagger_tin:*=reskillable:agility|2
         spartanweaponry:longsword_tin:*=reskillable:attack|2
         spartanweaponry:katana_tin:*=reskillable:agility|2
@@ -641,8 +641,8 @@ general {
         spartanshields:shield_tower_electrum:*=reskillable:defense|10,reskillable:magic|6
         spartanshields:shield_basic_bronze:*=reskillable:defense|6
         spartanshields:shield_tower_bronze:*=reskillable:defense|6
-        spartanshields:shield_basic_copper:*=reskillable:defense|2
-        spartanshields:shield_tower_copper:*=reskillable:defense|2
+        spartanshields:shield_basic_copper:*=reskillable:defense|3
+        spartanshields:shield_tower_copper:*=reskillable:defense|3
         spartanshields:shield_basic_tin:*=reskillable:defense|2
         spartanshields:shield_tower_tin:*=reskillable:defense|2
         spartanshields:shield_basic_lead:*=reskillable:defense|6
@@ -654,28 +654,28 @@ general {
         spartanshields:shield_basic_steel:*=reskillable:defense|5
         spartanshields:shield_tower_steel:*=reskillable:defense|5
         spartanshields:shield_tc_thaumium:*=reskillable:defense|6
-        spartanweaponry:dagger_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:longsword_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:katana_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:saber_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:rapier_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:greatsword_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:hammer_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:warhammer_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:spear_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:halberd_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:pike_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:lance_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:throwing_knife_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:throwing_axe_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:javelin_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:boomerang_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:battleaxe_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:mace_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:glaive_silver:*=reskillable:attack|4,reskillable:magic|2
-        spartanweaponry:staff_silver:*=reskillable:agility|4,reskillable:magic|2
-        spartanweaponry:longbow_silver:*=reskillable:attack|2,reskillable:magic|2,reskillable:agility|4
-        spartanweaponry:crossbow_silver:*=reskillable:attack|4,reskillable:magic|2,reskillable:agility|2
+        spartanweaponry:dagger_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:longsword_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:katana_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:saber_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:rapier_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:greatsword_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:hammer_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:warhammer_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:spear_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:halberd_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:pike_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:lance_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:throwing_knife_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:throwing_axe_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:javelin_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:boomerang_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:battleaxe_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:mace_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:glaive_silver:*=reskillable:attack|4,reskillable:magic|3
+        spartanweaponry:staff_silver:*=reskillable:agility|4,reskillable:magic|3
+        spartanweaponry:longbow_silver:*=reskillable:attack|2,reskillable:magic|3,reskillable:agility|4
+        spartanweaponry:crossbow_silver:*=reskillable:attack|4,reskillable:magic|3,reskillable:agility|2
         spartanweaponry:dagger_lead:*=reskillable:agility|6
         spartanweaponry:longsword_lead:*=reskillable:attack|6
         spartanweaponry:katana_lead:*=reskillable:agility|6
@@ -718,7 +718,7 @@ general {
         spartanweaponry:mace_gold:*=reskillable:attack|2,reskillable:magic|4
         spartanweaponry:glaive_gold:*=reskillable:attack|2,reskillable:magic|4
         spartanweaponry:staff_gold:*=reskillable:agility|2,reskillable:magic|4
-        spartanweaponry:crossbow_gold:*=reskillable:attack|2,reskillable:magic|2
+        spartanweaponry:crossbow_gold:*=reskillable:attack|2,reskillable:magic|4
         spartanweaponry:dagger_diamond:*=reskillable:agility|18
         spartanweaponry:longsword_diamond:*=reskillable:attack|18
         spartanweaponry:katana_diamond:*=reskillable:agility|18
@@ -981,14 +981,14 @@ general {
         bountifulbaubles:flare_red:*=reskillable:magic|69420
         bountifulbaubles:phantomprism:*=reskillable:magic|69420
         disenchanter:disenchantmenttable:*=reskillable:building|6,reskillable:magic|12
-        spartanshields:shield_basic_gold:*=reskillable:defense|2,reskillable:magic|4
+        spartanshields:shield_basic_gold:*=reskillable:defense|4,reskillable:magic|4
         spartanshields:shield_basic_iron:*=reskillable:defense|9
-        spartanshields:shield_basic_silver:*=reskillable:defense|4,reskillable:magic|2
+        spartanshields:shield_basic_silver:*=reskillable:defense|4,reskillable:magic|3
         spartanshields:shield_basic_obsidian:*=reskillable:defense|12
         spartanshields:shield_basic_diamond:*=reskillable:defense|18
-        spartanshields:shield_tower_gold:*=reskillable:defense|2,reskillable:magic|4
+        spartanshields:shield_tower_gold:*=reskillable:defense|4,reskillable:magic|4
         spartanshields:shield_tower_iron:*=reskillable:defense|9
-        spartanshields:shield_tower_silver:*=reskillable:defense|4,reskillable:magic|2
+        spartanshields:shield_tower_silver:*=reskillable:defense|4,reskillable:magic|3
         spartanshields:shield_tower_obsidian:*=reskillable:defense|12
         spartanshields:shield_tower_diamond:*=reskillable:defense|18
         aquaculture:neptunium_pickaxe:*=reskillable:mining|10
@@ -1193,42 +1193,42 @@ general {
         mysticalworld:silver_chestplate:*=reskillable:defense|6,reskillable:magic|3
         mysticalworld:silver_leggings:*=reskillable:defense|6,reskillable:magic|3
         mysticalworld:silver_boots:*=reskillable:defense|6,reskillable:magic|3
-        mysticalworld:copper_helmet:*=reskillable:defense|2
-        mysticalworld:copper_chestplate:*=reskillable:defense|2
-        mysticalworld:copper_leggings:*=reskillable:defense|2
-        mysticalworld:copper_boots:*=reskillable:defense|2
+        mysticalworld:copper_helmet:*=reskillable:defense|3
+        mysticalworld:copper_chestplate:*=reskillable:defense|3
+        mysticalworld:copper_leggings:*=reskillable:defense|3
+        mysticalworld:copper_boots:*=reskillable:defense|3
         mysticalworld:antler_hat:*=reskillable:gathering|8
-        mysticalworld:silver_knife:*=reskillable:attack|3,reskillable:gathering|3
-        mysticalworld:copper_knife:*=reskillable:attack|2,reskillable:gathering|2
-        roots:copper_knife:*=reskillable:attack|2,reskillable:gathering|2
-        mysticalworld:amethyst_knife:*=reskillable:attack|6,reskillable:gathering|6
-        mysticalworld:aubergine_seed:*=reskillable:farming|2
+        mysticalworld:silver_knife:*=reskillable:gathering|4,reskillable:magic|3
+        mysticalworld:copper_knife:*=reskillable:gathering|3
+        roots:copper_knife:*=reskillable:gathering|3
+        mysticalworld:amethyst_knife:*=reskillable:gathering|8,reskillable:magic|4
+        mysticalworld:aubergine_seed:*=reskillable:farming|3
         roots:wildroot:*=reskillable:farming|2
         mysticalworld:silkworm_egg:*=reskillable:farming|6
-        mysticalworld:copper_axe:*=reskillable:gathering|2
-        mysticalworld:copper_hoe:*=reskillable:farming|2
-        mysticalworld:copper_pickaxe:*=reskillable:mining|2
-        mysticalworld:copper_shovel:*=reskillable:gathering|2
-        mysticalworld:copper_sword:*=reskillable:attack|2
+        mysticalworld:copper_axe:*=reskillable:gathering|3
+        mysticalworld:copper_hoe:*=reskillable:farming|3
+        mysticalworld:copper_pickaxe:*=reskillable:mining|3
+        mysticalworld:copper_shovel:*=reskillable:gathering|3
+        mysticalworld:copper_sword:*=reskillable:attack|3
         mysticalworld:silver_axe:*=reskillable:gathering|6,reskillable:magic|3
         mysticalworld:silver_hoe:*=reskillable:farming|6,reskillable:magic|3
         mysticalworld:silver_pickaxe:*=reskillable:mining|6,reskillable:magic|3
         mysticalworld:silver_shovel:*=reskillable:gathering|6,reskillable:magic|3
         mysticalworld:silver_sword:*=reskillable:attack|6,reskillable:magic|3
-        mysticalworld:amethyst_axe:*=reskillable:gathering|8,reskillable:magic|8
-        mysticalworld:amethyst_hoe:*=reskillable:farming|8,reskillable:magic|8
-        mysticalworld:amethyst_pickaxe:*=reskillable:mining|8,reskillable:magic|8
-        mysticalworld:amethyst_shovel:*=reskillable:gathering|8,reskillable:magic|8
-        mysticalworld:amethyst_sword:*=reskillable:attack|8,reskillable:magic|8
+        mysticalworld:amethyst_axe:*=reskillable:gathering|8,reskillable:magic|4
+        mysticalworld:amethyst_hoe:*=reskillable:farming|8,reskillable:magic|4
+        mysticalworld:amethyst_pickaxe:*=reskillable:mining|8,reskillable:magic|4
+        mysticalworld:amethyst_shovel:*=reskillable:gathering|8,reskillable:magic|4
+        mysticalworld:amethyst_sword:*=reskillable:attack|8,reskillable:magic|4
         quark:witch_hat:*=reskillable:magic|6
         quark:pirate_hat:*=reskillable:agility|6
         quark:archaeologist_hat:*=reskillable:mining|6
         quark:pickarang:*=reskillable:mining|8,reskillable:agility|6
         quark:soul_powder:*=reskillable:magic|10
-        roots:iron_knife:*=reskillable:attack|4,reskillable:gathering|4
-        roots:diamond_knife:*=reskillable:attack|8,reskillable:gathering|8
-        roots:amethyst_knife:*=reskillable:attack|6,reskillable:gathering|6
-        roots:staff:*=reskillable:gathering|2,reskillable:magic|2
+        roots:iron_knife:*=reskillable:gathering|6
+        roots:diamond_knife:*=reskillable:gathering|14
+        roots:amethyst_knife:*=reskillable:gathering|8,reskillable:magic|4
+        roots:staff:*=reskillable:gathering|6,reskillable:magic|2
         roots:living_pickaxe:*=reskillable:mining|4,reskillable:magic|6
         roots:living_shovel:*=reskillable:gathering|4,reskillable:magic|6
         roots:living_hoe:*=reskillable:farming|4,reskillable:magic|6
