--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -9,6 +9,7 @@ entitiesalwaysinfernal {
     B:Creeper=false
     B:Cyclops=false
     B:ElderGuardian=false
+    B:EnderDragon=false
     B:Enderman=false
     B:EntityAmalgalich=false
     B:EntityAshen=false
@@ -145,6 +146,7 @@ entitiesalwaysinfernal {
     B:EntityZombie=false
     B:EntityZombieVillager=false
     B:EvocationIllager=false
+    B:Ghast=false
     B:Guardian=false
     B:Husk=false
     B:LavaSlime=false
@@ -165,6 +167,7 @@ entitiesalwaysinfernal {
     B:MoCEntityWraith=false
     B:PigZombie=false
     B:PirateMimicEntity=false
+    B:Shulker=false
     B:Silverfish=false
     B:Skeleton=false
     B:Slime=false
@@ -239,6 +242,7 @@ entitiesalwaysinfernal {
     B:"quark:ashen"=false
     B:"quark:dweller"=false
     B:"quark:pirate"=false
+    B:"quark:wraith"=false
     B:siren=false
     B:stymphalianbird=false
     B:treant=false
@@ -257,6 +261,7 @@ entitiesalwaysinfernal {
     B:twilightforest.yeti_alpha=false
     B:vespid=false
     B:vespidqueen=false
+    B:wasp=false
     B:wendigo=false
     B:wood_mimic=false
 }
@@ -267,6 +272,7 @@ entitybasehealth {
     D:Barakoana=10.0
     D:Barakoaya=10.0
     D:"Battletower Golem"=216.10733032226562
+    D:Blaze=41.210899353027344
     D:BoundSoulEntity=43.78858184814453
     D:Bound_Soul=39.69782257080078
     D:CaveSpider=26.169307708740234
@@ -388,6 +394,8 @@ entitybasehealth {
     D:MoCEntityWWolf=15.0
     D:MoCEntityWerewolf=40.0
     D:MoCEntityWraith=10.0
+    D:PigZombie=41.885765075683594
+    D:Shulker=30.0
     D:Silverfish=8.0
     D:Skeleton=20.0
     D:Slime=22.388212203979492
@@ -436,12 +444,14 @@ entitybasehealth {
     D:"quark:ashen"=20.0
     D:"quark:dweller"=20.0
     D:"quark:pirate"=20.0
+    D:"quark:wraith"=40.0
     D:siren=50.0
     D:stymphalianbird=24.0
     D:treant=132.0
     D:trumpetskeleton.TrumpetSkeleton=20.0
     D:twilightforest.hydra=360.0
     D:twilightforest.minoshroom=6000.0
+    D:wasp=10.0
     D:wendigo=44.0
 }
 
@@ -500,6 +510,7 @@ permittedentities {
     B:Creeper=true
     B:Cyclops=false
     B:ElderGuardian=true
+    B:EnderDragon=true
     B:Enderman=true
     B:EntityAmalgalich=false
     B:EntityAshen=true
@@ -636,6 +647,7 @@ permittedentities {
     B:EntityZombie=true
     B:EntityZombieVillager=true
     B:EvocationIllager=true
+    B:Ghast=true
     B:Guardian=true
     B:Husk=true
     B:LavaSlime=true
@@ -656,6 +668,7 @@ permittedentities {
     B:MoCEntityWraith=true
     B:PigZombie=true
     B:PirateMimicEntity=true
+    B:Shulker=true
     B:Silverfish=true
     B:Skeleton=true
     B:Slime=true
@@ -730,6 +743,7 @@ permittedentities {
     B:"quark:ashen"=true
     B:"quark:dweller"=true
     B:"quark:pirate"=true
+    B:"quark:wraith"=true
     B:siren=true
     B:stymphalianbird=true
     B:treant=true
@@ -748,6 +762,7 @@ permittedentities {
     B:twilightforest.yeti_alpha=true
     B:vespid=true
     B:vespidqueen=true
+    B:wasp=true
     B:wendigo=true
     B:wood_mimic=true
 }
