--- a/config/First Aid.cfg
+++ b/config/First Aid.cfg
@@ -54,7 +54,7 @@ general {
 
         # Min: 2
         # Max: 12
-        I:maxHealthHead=8
+        I:maxHealthHead=6
 
         # Min: 2
         # Max: 12
@@ -101,7 +101,7 @@ general {
         # REPLACE
         # APPEND
         # NONE
-        S:armorTooltipMode=APPEND
+        S:armorTooltipMode=NONE
 
         # Disables the funny easter eggs on certain events
         B:enableEasterEggs=true
