--- a/config/MoCreatures/MoCreatures.cfg
+++ b/config/MoCreatures/MoCreatures.cfg
@@ -773,10 +773,10 @@ shark {
 
 silverskeleton {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=10
     I:maxchunk=4
     I:maxspawn=4
-    I:minspawn=1
+    I:minspawn=2
 }
 
 
@@ -876,7 +876,7 @@ werewolf {
 ####################
 
 wildhorse {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=8
     I:maxchunk=4
     I:maxspawn=4
