--- a/config/apotheosis/enchantability.cfg
+++ b/config/apotheosis/enchantability.cfg
@@ -5,8 +5,6 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 8]
     I:ARCTIC=8
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 30]
     I:BANDIT=30
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
@@ -24,8 +22,6 @@
     I:CULTIST_LEADER=20
     I:CULTIST_PLATE=13
     I:CULTIST_ROBE=13
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
     I:"Cushioned Boots"=5
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 10]
@@ -77,8 +73,6 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 40]
     I:GOLD=20
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:"Golem Armor"=15
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
@@ -104,11 +98,7 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:LEATHER=15
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 35]
     I:LEGENDARY_BANDIT=35
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
     I:Lifebelt=0
     I:MITHRIL=20
 
@@ -132,8 +122,6 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
     I:RESPIRATOR=0
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 30]
     I:ROYAL=30
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
@@ -141,8 +129,6 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
     I:SAGE=20
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
     I:SAMURAI=25
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
@@ -185,8 +171,6 @@
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
     I:Silver=20
     I:THAUMIUM=25
-
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:TORO=15
     I:VOID=10
     I:VOIDROBE=10
@@ -230,6 +214,12 @@
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 12]
     I:hideARMOR=12
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
+    I:"improvedbackpacks:backpack"=0
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
+    I:"improvedbackpacks:ender_backpack"=0
     I:material_archer=10
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 9]
@@ -274,11 +264,7 @@
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:AmphithereSword=10
     I:BRONZE=15
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:"Barkified Axe"=10
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
     I:"Bound Tools"=9
     I:Bronze=14
     I:CVOID=20
@@ -308,8 +294,6 @@
     I:DreadSword=0
     I:Electrum=35
     I:Enderium=20
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 6]
     I:"Explosion Pickaxe"=6
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
@@ -324,11 +308,7 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:GOLD=40
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 8]
     I:"Gamble Pickaxe"=8
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:"Hasty Pickaxe"=10
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 50]
@@ -368,8 +348,6 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:Neptunium=15
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 7]
     I:"Obsidian Harvester"=7
     I:PRIMALVOID=20
     I:REALEMERALD=10
@@ -405,8 +383,6 @@
     I:THAUMIUM=22
     I:THAUMIUM_ELEMENTAL=18
     I:VOID=10
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"Vein Pickaxe"=5
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
