--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -7,8 +7,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:ARCTIC <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:BANDIT <
      >
 
@@ -39,8 +37,6 @@ armors {
      >
     S:CULTIST_ROBE <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:"Cushioned Boots" <
      >
 
@@ -121,8 +117,6 @@ armors {
         Auric
         Ornate
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:"Golem Armor" <
      >
 
@@ -166,12 +160,8 @@ armors {
         Lamellar
         Cow Skin
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:LEGENDARY_BANDIT <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:Lifebelt <
      >
     S:MITHRIL <
@@ -204,8 +194,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:RESPIRATOR <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:ROYAL <
      >
 
@@ -216,8 +204,6 @@ armors {
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:SAGE <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:SAMURAI <
      >
 
@@ -276,8 +262,6 @@ armors {
      >
     S:THAUMIUM <
      >
-
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:TORO <
      >
     S:VOID <
@@ -335,6 +319,14 @@ armors {
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:hideARMOR <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:"improvedbackpacks:backpack" <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:"improvedbackpacks:ender_backpack" <
      >
     S:material_archer <
      >
@@ -989,12 +981,8 @@ tools {
      >
     S:BRONZE <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Barkified Axe" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Bound Tools" <
      >
     S:CVOID <
@@ -1034,8 +1022,6 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:DreadSword <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Explosion Pickaxe" <
      >
 
@@ -1061,12 +1047,8 @@ tools {
         Auric
         Ornate
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Gamble Pickaxe" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Hasty Pickaxe" <
      >
 
@@ -1120,8 +1102,6 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:Neptunium <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Obsidian Harvester" <
      >
     S:PRIMALVOID <
@@ -1170,8 +1150,6 @@ tools {
      >
     S:VOID <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"Vein Pickaxe" <
      >
 
