--- a/config/charm.cfg
+++ b/config/charm.cfg
@@ -906,7 +906,7 @@ CharmWorld {
 
         # Chance (out of 1.0) of a chunk within the village boundary spawning a golem.
         # This is only valid if the 'Mobs outside' config option allows it. (default 0.1)
-        D:"Extra golem weight"=1
+        D:"Extra golem weight"=0.1
 
         # Chance (out of 1.0) of a chunk allowing any kind of mob generation.
         # The greater the chance, the more likely a mob will be considered to spawn.
@@ -931,10 +931,10 @@ CharmWorld {
 
         # Chance (out of 1.0) of a village having more dogs, cats and golems within its boundary.
         # If the village is in a snowy biome, this option lets snow golems spawn. (default 0.75)
-        D:"Mobs outside"=0.75
+        D:"Mobs outside"=1
 
         # Chance (out of 1.0) of a village having mushrooms spawn, including large mushrooms, within its boundary. (default 0.75)
-        D:"Mushrooms outside"=0.75
+        D:"Mushrooms outside"=0
 
         # Chance (out of 1.0) of a village having pumpkins (and rarely melons) scattered within its boundary. (default 0.6)
         D:"Pumpkins outside"=0.6
@@ -967,10 +967,10 @@ CharmWorld {
         B:"Vanilla tools in frames and stands"=true
 
         # Number of passes that the generator will erode structures in a zombie village chunk. (default 512)
-        I:"Zombie village erosion damage"=512
+        I:"Zombie village erosion damage"=100
 
         # If true, zombie villages have damaged and eroded buildings and structures. (default true)
-        B:"Zombie villages are eroded"=true
+        B:"Zombie villages are eroded"=false
     }
 
     VindicatorsInRoofedForest {
