--- a/config/dimensionalcontrol/presets/Uncharted_Territories2/biomeproviders/RL.cfg
+++ b/config/dimensionalcontrol/presets/Uncharted_Territories2/biomeproviders/RL.cfg
@@ -12,7 +12,6 @@ addSpawnBiome("biomesoplenty:cherry_blossom_grove")
 addSpawnBiome("biomesoplenty:cold_desert")
 addSpawnBiome("biomesoplenty:coniferous_forest")
 addSpawnBiome("biomesoplenty:eucalyptus_forest")
-addSpawnBiome("biomesoplenty:flower_field")
 addSpawnBiome("biomesoplenty:fungi_forest")
 addSpawnBiome("biomesoplenty:grassland")
 addSpawnBiome("biomesoplenty:gravel_beach")
@@ -40,6 +39,8 @@ addSpawnBiome("biomesoplenty:snowy_forest")
 addSpawnBiome("biomesoplenty:tropical_rainforest")
 addSpawnBiome("biomesoplenty:temperate_rainforest")
 addSpawnBiome("biomesoplenty:wetland")
+addSpawnBiome("biomesoplenty:xeric_shrubland")
+addSpawnBiome("biomesoplenty:steppe")
 addSpawnBiome("biomesoplenty:white_beach")
 addSpawnBiome("biomesoplenty:gravel_beach")
 addSpawnBiome("biomesoplenty:woodland")
@@ -184,6 +185,8 @@ genLayer2.addBiome(301, "biomesoplenty:steppe", 10)
 genLayer2.addBiome(301, "biomesoplenty:xeric_shrubland", 10)
 genLayer2.addBiome(301, "biomesoplenty:oasis", 10)
 genLayer2.addBiome(301, "defiledlands:desert_defiled", 5)
+genLayer2.addBiome(301, "minecraft:ocean", 20)
+
 
 #2 is average hot,     
 
@@ -225,7 +228,6 @@ genLayer2.addBiome(305, "biomesoplenty:orchard", 10)
 genLayer2.addBiome(305, "biomesoplenty:pasture", 10)
 genLayer2.addBiome(305, "biomesoplenty:mountain", 7)
 genLayer2.addBiome(305, "defiledlands:plains_defiled", 5)
-genLayer2.addBiome(305, "minecraft:ocean", 1)
 
 #6 is wet warm,
 
@@ -235,7 +237,7 @@ genLayer2.addBiome(306, "biomesoplenty:grassland", 10)
 genLayer2.addBiome(306, "biomesoplenty:prairie", 10)
 genLayer2.addBiome(306, "biomesoplenty:sacred_springs", 3)
 genLayer2.addBiome(306, "biomesoplenty:mangrove", 10)
-genLayer2.addBiome(306, "minecraft:ocean", 1)
+genLayer2.addBiome(306, "minecraft:ocean", 20)
 
 #7 is dry cool, 
 
@@ -247,7 +249,6 @@ genLayer2.addBiome(307, "biomesoplenty:highland", 5)
 genLayer2.addBiome(307, "biomesoplenty:grove", 10)
 genLayer2.addBiome(307, "minecraft:taiga", 10)
 genLayer2.addBiome(307, "biomesoplenty:shield", 10)
-genLayer2.addBiome(307, "minecraft:ocean", 1)
 
 # 8 is average cool,
 
@@ -260,7 +261,7 @@ genLayer2.addBiome(308, "minecraft:birch_forest", 20)
 genLayer2.addBiome(308, "biomesoplenty:crag", 10)
 genLayer2.addBiome(308, "biomesoplenty:grove", 20)
 genLayer2.addBiome(308, "biomesoplenty:pasture", 20)
-genLayer2.addBiome(308, "minecraft:ocean", 1)
+genLayer2.addBiome(308, "minecraft:ocean", 20)
 
 #9 is wet cool,
 
@@ -307,7 +308,7 @@ genLayer2.addBiome(312, "iceandfire:glacier", 3)
 
 
 //Add frozen ocean
-genLayer2.addBiome(315, "minecraft:frozen_ocean", 10)
+genLayer2.addBiome(315, "minecraft:frozen_ocean", 20)
 
 
 //genLayer2 = new GenLayerBiome(200, genLayer2, worldType, null)
