--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -402,6 +402,7 @@ entitybasehealth {
     D:ZombieVillager=20.0
     D:archer=20.0
     D:barakoan_barakoana=20.842906951904297
+    D:barakoaya=26.536590576171875
     D:bound_soul=31.020423889160156
     D:"charm:spectre"=0.5
     D:defiledlands.host=37.345802307128906
