--- a/config/apotheosis/enchantments.cfg
+++ b/config/apotheosis/enchantments.cfg
@@ -271,106 +271,57 @@
 
 
 "aquaculture:appealing" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 5]
     I:"Max Level"=5
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
 
 "aquaculture:barbed_hook" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 5]
     I:"Max Level"=5
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
 
 "aquaculture:double_hook" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 5]
     I:"Max Level"=5
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
 
 "aquaculture:heavy_line" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 5]
     I:"Max Level"=5
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
 
 "aquaculture:long_cast" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 5]
     I:"Max Level"=5
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
 
 "aquaculture:magnetic" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 5]
     I:"Max Level"=5
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
 
 "aquaculture:short_cast" {
-    # The max level of this enchantment. [range: 1 ~ 127, default: 5]
     I:"Max Level"=5
-
-    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
-
-    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
     I:"Min Level"=1
-
-    # A function to determine the min enchanting power. [default: ]
     S:"Min Power Function"=
 }
 
@@ -671,6 +622,21 @@
 "ebwizardry:shock_protection" {
     # The max level of this enchantment. [range: 1 ~ 127, default: 21]
     I:"Max Level"=21
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"elenaidodge:lightweight" {
+    # The max level of this enchantment. [range: 1 ~ 127, default: 17]
+    I:"Max Level"=17
 
     # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
     S:"Max Power Function"=
