--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -85,9 +85,9 @@ general {
         minecraft:skull:1:*=reskillable:building|8,reskillable:magic|8
         minecraft:fireworks:*=reskillable:agility|4
         minecraft:anvil:*=reskillable:building|12
-        minecraft:brewing_stand:*=reskillable:building|22
+        minecraft:brewing_stand:*=reskillable:gathering|22
         rustic:condenser:*=reskillable:gathering|10
-        rustic:condenser_advanced:*=reskillable:gathering|20
+        rustic:condenser_advanced:*=reskillable:gathering|18
         minecraft:enchanting_table:*=reskillable:building|8,reskillable:magic|22
         rustic:chili_pepper_seeds:*=reskillable:farming|4
         rustic:tomato_seeds:*=reskillable:farming|4
@@ -236,12 +236,25 @@ general {
         biomesoplenty:sapling_2:6:*=reskillable:farming|2
         biomesoplenty:sapling_2:7:*=reskillable:farming|2
         forestry:sapling:*=reskillable:farming|2
-        roots:moonglow_seed:*=reskillable:farming|6,reskillable:magic|2
-        roots:spirit_herb_seed:*=reskillable:farming|6,reskillable:magic|2
-        roots:wildewheet_seed:*=reskillable:farming|2
-        defiledlands:tenebra_sapling:*=reskillable:farming|10
+        roots:moonglow_seed:*=reskillable:farming|8,reskillable:magic|2
+        roots:spirit_herb_seed:*=reskillable:farming|8,reskillable:magic|2
+        roots:wildewheet_seed:*=reskillable:farming|8
+        defiledlands:tenebra_sapling:*=reskillable:farming|12
+        defiledlands:scuronotte:*=reskillable:farming|14
+        cookingforblockheads:*=cooking_table:*=reskillable:farming|16
+        cookingforblockheads:*=oven:*=reskillable:farming|16
+        cookingforblockheads:*=fridge:*=reskillable:farming|16
+        cookingforblockheads:*=sink:*=reskillable:farming|16
+        cookingforblockheads:*=toaster:*=reskillable:farming|16
+        cookingforblockheads:*=cow_jar:*=reskillable:farming|16
+        cookingforblockheads:*=counter:*=reskillable:farming|16
+        cookingforblockheads:*=cabinet:*=reskillable:farming|16
+        cookingforblockheads:*=heating_unit:*=reskillable:farming|16
+        cookingforblockheads:*=ice_unit:*=reskillable:farming|16
+        cookingforblockheads:*=preservation_chamber:*=reskillable:farming|16
         quark:variant_sapling:0:*=reskillable:farming|2
         quark:variant_sapling:1:*=reskillable:farming|2
+        minecraft:wheat:*=reskillable:farming|8
         twilightforest:twilight_sapling:0:*=reskillable:farming|18
         twilightforest:twilight_sapling:1:*=reskillable:farming|18
         twilightforest:twilight_sapling:2:*=reskillable:farming|18
@@ -1220,6 +1233,7 @@ general {
         mysticalworld:amethyst_pickaxe:*=reskillable:mining|8,reskillable:magic|4
         mysticalworld:amethyst_shovel:*=reskillable:gathering|8,reskillable:magic|4
         mysticalworld:amethyst_sword:*=reskillable:attack|8,reskillable:magic|4
+        mysticalworld:wasp_attractant:*=reskillable:gathering|4
         quark:witch_hat:*=reskillable:magic|6
         quark:pirate_hat:*=reskillable:agility|6
         quark:archaeologist_hat:*=reskillable:mining|6
@@ -1562,7 +1576,7 @@ trait {
     }
 
     "reskillable:sidestep" {
-        B:Enabled=true
+        B:Enabled=false
         S:Requirements <
             reskillable:agility|14
             reskillable:defense|10
@@ -1620,8 +1634,7 @@ trait {
     "reskillable:undershirt" {
         B:Enabled=true
         S:Requirements <
-            reskillable:defense|10
-            reskillable:agility|12
+            reskillable:defense|16
          >
         I:"Skill Point Cost"=6
         I:"X-Pos [0-4]:"=1
@@ -1739,6 +1752,36 @@ trait {
         I:"Skill Point Cost"=8
         I:"X-Pos [0-4]:"=2
         I:"Y-Pos [0-3]:"=3
+    }
+
+    "elenaidodge:dodge" {
+        B:Enabled=true
+        S:Requirements <
+            reskillable:agility|14
+         >
+        I:"Skill Point Cost"=6
+        I:"X-Pos [0-4]:"=2
+        I:"Y-Pos [0-3]:"=0
+    }
+
+    "elenaidodge:walljump" {
+        B:Enabled=true
+        S:Requirements <
+            
+         >
+        I:"Skill Point Cost"=0
+        I:"X-Pos [0-4]:"=4
+        I:"Y-Pos [0-3]:"=2
+    }
+
+    "elenaidodge:ledgegrab" {
+        B:Enabled=true
+        S:Requirements <
+            
+         >
+        I:"Skill Point Cost"=0
+        I:"X-Pos [0-4]:"=0
+        I:"Y-Pos [0-3]:"=2
     }
 
 }
